# radiorecord

./: .gitignore  README.md  pyproject.toml  setup.iss
.github/workflows/: build.yml  windows-exe.yml  windows.yml
radiorecord/: radiorecord.py
